--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,29 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --light-purple-1: #C4CAF0;
+  --light-purple-2: #DBB7FC;
+  --mid-purple-1: #AA9DD0;
+  --mid-purple-2: #9368BC;
+  --mid-purple-3: #8858B5;
+  --mid-purple-4: #AF5CAA;
+  --mid-purple-5: #BB4BAD;
+  --dark-purple-1: #8757B5;
+  --dark-purple-2: #5E3D84;
+  --dark-purple-3: #3F225B;
+  --orange-1: #F9A819;
+  --orange-2: #FAA81A;
+  --pink-1: #FF008A;
+  --yellow-1: #FFF500;
+  --yellow-2: #FFF200;
+}
+
+::selection {
+  color: var(--light-purple-1);
+  background: var(--dark-purple-3);
+}
+
 * {
   font-family: "Montserrat Alternates", cursive;
   font-weight: 400;
@@ -11,5 +34,14 @@
 }
 
 body {
-  @apply bg-purple-bg-light
+  @apply bg-purple-bg-light;
 }
+
+footer {
+  box-shadow: inset 0px 60px 60px var(--light-purple-1);
+}
+/* 
+
+.hexagon {
+  clip-path: ;
+} */
