--- a/app/globals.css
+++ b/app/globals.css
@@ -30,8 +30,12 @@
 * {
   font-family: "Montserrat Alternates", cursive;
   font-weight: 400;
-  font-style: normal;
+  font-style: normal;  
 }
+
+/* button {
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
+} */
 
 body {
   @apply bg-purple-bg-light;
