--- a/app/globals.css
+++ b/app/globals.css
@@ -37,6 +37,18 @@
   clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
 } */
 
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+      display: none;
+  }
+ /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+      -ms-overflow-style: none;  /* IE and Edge */
+      scrollbar-width: none;  /* Firefox */
+}
+}
+
 body {
   @apply bg-purple-bg-light;
 }
