--- a/app/globals.css
+++ b/app/globals.css
@@ -33,10 +33,6 @@
   font-style: normal;  
 }
 
-/* button {
-  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%);
-} */
-
 @layer utilities {
   /* Hide scrollbar for Chrome, Safari and Opera */
   .no-scrollbar::-webkit-scrollbar {
@@ -53,7 +49,7 @@ body {
   @apply bg-purple-bg-light;
 }
 
-.container {
+.responsive-container {
   @apply px-6;
 }
 
