--- a/app/globals.css
+++ b/app/globals.css
@@ -27,10 +27,12 @@
   background: var(--dark-purple-3);
 }
 
-* {
+*, *::after, *::before {
   font-family: "Montserrat Alternates", cursive;
   font-weight: 400;
-  font-style: normal;  
+  font-style: normal;
+
+  /* transition: .3s ease; */
 }
 
 @layer utilities {
@@ -46,7 +48,6 @@
 }
 
 body {
-  @apply bg-purple-bg-light;
 }
 
 .responsive-container {
