--- a/app/(pages)/trial/_components/AiHumanMeter.css
+++ b/app/(pages)/trial/_components/AiHumanMeter.css
@@ -1,22 +1,23 @@
 .meterContainer{
     width: 100px;
     height: 350px;
-    clip-path: polygon(20% 0 , 80% 0, 100% 10% , 100% 20% , 80% 30% , 80% 70% , 100% 80% , 100% 90% , 80% 100% , 20% 100% , 0 90% , 0 80%, 20% 70% , 20% 30% , 0 20% , 0 10%);
-    background-color: beige;
+    clip-path: polygon(20% 0 , 80% 0, 100% 7% , 100% 17% , 80% 24% , 80% 76% , 100% 83% , 100% 93% , 80% 100% , 20% 100% , 0 93% , 0 83%, 20% 76% , 20% 24% , 0 17% , 0 7%);
     background: conic-gradient(#41AD49 0deg 90deg , #855AA5 90deg 270deg , #41AD49 270deg 360deg);
     display: flex;
     align-items: center;
-    
+    position: relative;
+    z-index: 0;
 }
 
 .meter {
     position: relative;
     width: 100px;
-    height: 40%;
-    background-color: #ddd;
-    border-radius: 10px;
+    height: 52%;
+    background-color: transparent;
     overflow: hidden;
     user-select: none;
+    position: relative;
+    z-index: 0;
 }
 
 .top, .bottom {
